# mcmc

./: .gitmodules  CMakeLists.txt
examples/armadillo/: aees_mixture.cpp  de_normal_mean.cpp  hmc_normal.cpp  mala_normal.cpp  nuts_normal.cpp  rmhmc_normal.cpp  rwmh_normal_mean.cpp
examples/autodiff/: hmc_normal_autodiff.cpp
examples/eigen/: aees_mixture.cpp  de_normal_mean.cpp  hmc_normal.cpp  mala_normal.cpp  nuts_normal.cpp  rmhmc_normal.cpp  rwmh_normal_mean.cpp
include/mcmc/: mcmc.hpp
include/mcmc/BaseMatrixOps/include/: BaseMatrixOps.hpp
include/mcmc/BaseMatrixOps/include/core/: abs_max.hpp  accu.hpp  array_add.hpp  array_div.hpp  array_mult.hpp  as_scalar.hpp  cholesky.hpp  constant.hpp  cos.hpp  diagvec.hpp  endl.hpp  exp.hpp  eye.hpp  hadamard.hpp  is_finite.hpp  log.hpp  log_det.hpp  ones.hpp  pow.hpp  quad_form.hpp  set_size.hpp  set_values.hpp  sort.hpp  sqrt.hpp
include/mcmc/BaseMatrixOps/include/extra/: bmo_extra.hpp  get_sort_index.hpp  index_min.hpp  reset_negative_values.hpp  tesseract_type.hpp
include/mcmc/BaseMatrixOps/tests/: bmo_tests.hpp  cube_type.cpp  log_vec.cpp  rand.cpp
include/mcmc/mcmc/: aees.hpp  hmc.hpp  mcmc_algos.hpp  rmhmc.hpp
include/mcmc/mcmc/BaseMatrixOps/include/core/: abs.hpp  access.hpp  bmo_core.hpp  cout.hpp  diagmat.hpp  dot.hpp  eval.hpp  inv.hpp  max.hpp  min.hpp  ncol.hpp  norm.hpp  randi.hpp  randn.hpp  randu.hpp  size.hpp  solve.hpp  sum.hpp  trace.hpp  transpose.hpp  zeros.hpp
include/mcmc/mcmc/BaseMatrixOps/include/extra/: cube_type.hpp  unit_vec.hpp
include/mcmc/mcmc/BaseMatrixOps/include/misc/: bmo_options.hpp  misc_math.hpp
include/mcmc/mcmc/BaseMatrixOps/include/stats/: bmo_stats.hpp  rind.hpp  rnorm.hpp  runif.hpp
include/mcmc/mcmc/BaseMatrixOps/tests/: sort_test.cpp  tess_type.cpp
include/mcmc/mcmc/mcmc/: de.hpp  mala.hpp  nuts.hpp  rwmh.hpp
include/mcmc/misc/: bounds_check.hpp  determine_bounds_type.hpp  inv_jacobian_adjust.hpp  log_jacobian.hpp  mcmc_options.hpp  mcmc_structs.hpp  misc.hpp  transform_vals.hpp
include/mcmc/stats/: dmvnorm.hpp  dnorm.hpp  mcmc_stats.hpp  seed_values.hpp
src/: aees.cpp  de.cpp  hmc.cpp  mala.cpp  nuts.cpp  rmhmc.cpp  rwmh.cpp
